# sftpman-rs

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  justfile
etc/bash_completion.d/: sftpman
etc/fish-completions/: sftpman.fish
src/: auth_type.rs  errors.rs  lib.rs  main.rs  manager.rs
src/cli/: create_update.rs  exit.rs  ls.rs  mod.rs  mount.rs  preflight_check.rs  remove.rs  runner.rs  umount.rs
src/model/: filesystem_mount_definition.rs  mod.rs  mount_state.rs
src/utils/: command.rs  fs.rs  fusermount.rs  mod.rs  process.rs  validation.rs
