[package]
name = "sftpman"
description = "A CLI application and library for managing and mounting sshfs (SFTP) filesystems"
authors = ["Slavi Pantaleev <slavi@devture.com>"]
homepage = "https://github.com/spantaleev/sftpman-rs"
repository = "https://github.com/spantaleev/sftpman-rs"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["sftp", "sshfs", "fuse"]
categories = ["command-line-utilities", "network-programming", "filesystem"]
include = ["/src", "/README.md", "/CHANGELOG.md", "/LICENSE"]
version = "2.0.3"
edition = "2021"

[lib]
name = "libsftpman"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.*", optional = true }
directories = { version = "5.0.*" }
env_logger = { version = "0.11.*" }
log = "0.4.*"
mnt = "0.3.*"
nix = { version = "0.29.*", features = ["signal"], default-features = false }
procfs = "0.17.*"
rand = "0.8.*"
serde = { version = "1.0.*", features = ["derive"], default-features = false }
serde_json = "1.0.*"
thiserror = "2.0.*"
validator = { version = "0.19.*", features = ["derive"] }

[features]
default = ["cli"]
# clap is behind a `cli` feature, because library consumers do not need this.
cli = ["dep:clap"]

[profile.release]
strip = true
opt-level = "z"
lto = true
